# correspondence-cryptor

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
correspondence_cryptor/: __init__.py  core.py
correspondence_cryptor/resources/: recd_msgs.json
tests/: test_core.py
