[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correspondence-cryptor"
version = "0.1.0"
requires-python = ">=3.9"
description = "Caesar cipher decoder"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["correspondence_cryptor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Exclude runtime-only entrypoints / scripts from coverage measurement
omit = [
  "correspondence_cryptor/__main__.py",
]

[tool.coverage.report]
# Treat these lines as non-coverable (same as .coveragerc)
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "^\\s*def main\\(",
]
fail_under = 90
